--- a/WebApp/Areas/Admin/Views/Statistic/GetDataDailyList.cshtml
+++ b/WebApp/Areas/Admin/Views/Statistic/GetDataDailyList.cshtml
@@ -15,6 +15,10 @@
         var ticketCount = @Html.Raw(Json.Encode(ViewBag.ticketCount));
         var ticketPrice = @Html.Raw(Json.Encode(ViewBag.ticketPrice));
         var deparmentName = @Html.Raw(Json.Encode(ViewBag.deparmentName));
+
+        var empName = @Html.Raw(Json.Encode(ViewBag.empName));
+        var empCount = @Html.Raw(Json.Encode(ViewBag.empCount));
+        var empPrice = @Html.Raw(Json.Encode(ViewBag.empPrice));
     </script>
     <script>
         new Chart(document.getElementById("pie-chart"), {
@@ -50,6 +54,43 @@
             }
         });
     </script>
+
+    <script>
+        new Chart(document.getElementById("pie-chart2"), {
+            type: 'pie',
+            data: {
+                labels: empName,
+                datasets: [{
+                    label: "Lượt tiếp khách",
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    data: empCount
+                }]
+            },
+            options: {
+                title: {
+                    display: true,
+                    text: 'Số lượt tiếp khách'
+                }
+            }
+        });
+    </script>
+
+
     <script>
         var ctx = document.getElementById('myChart').getContext('2d');
         var myChart = new Chart(ctx, {
@@ -89,6 +130,46 @@
             }
         });
     </script>
+
+    <script>
+        var ctx = document.getElementById('myChart2').getContext('2d');
+        var myChart2 = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: empName,
+                datasets: [{
+                    label: 'Tiền Tip',
+                    data: empPrice,
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    </script>
 }
 <div class="row">
     <div class="col-md-6">
@@ -96,6 +177,12 @@
     </div>
     <div class="col-md-6">
         <canvas id="pie-chart" width="800" height="450"></canvas>
+    </div>
+    <div class="col-md-6">
+        <canvas id="myChart2" width="800" height="450"></canvas>
+    </div>
+    <div class="col-md-6">
+        <canvas id="pie-chart2" width="800" height="450"></canvas>
     </div>
 </div>
 
