--- a/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
@@ -53,11 +53,28 @@
     {
         foreach (var item in Model)
         {
+            decimal tip = 0;
+
+            foreach (var temp in item.OrderDetails)
+            {
+                tip = tip + temp.DailyEmployees.Sum(x => x.Tip);
+            }
+
             <div class="panel-body">
                 <table class="table table-striped table-responsive">
                     <tbody>
                         <tr>
-                            <th>@Html.ActionLink(" ", "EditDailyList", new { id = item.ID }, new { @class = "btn btn-warning pull-right  btn-sm glyphicon glyphicon-edit" })#ID: @item.ID </th>
+                            <th>
+                                @Html.ActionLink(" ", "EditDailyList", new { id = item.ID }, new { @class = "btn btn-warning pull-right  btn-sm glyphicon glyphicon-edit" })#ID: @item.ID
+                                @if (tip > 0)
+                                {
+                                    <strong style="color: green;">Đã thanh toán</strong>
+                                }
+                                else
+                                {
+                                    <strong style="color: red;">Chưa thanh toán</strong>
+                                }
+                            </th>
                             <th>Yêu cầu: @item.Description </th>
                             <td>
                                 Ngày: @item.CreatedDate
@@ -109,21 +126,22 @@
                             }
                                     </tbody>
                                 </table>
-                                <span class="pull-right" style="margin-right:100px;">
+                <span class="pull-right" style="margin-right:100px;">
 
-                                    @{
-                                        if (item.Taxi_ID != null)
-                                        {
-                                            <strong>Giảm trực tiếp : </strong> @item.Taxi.Price <strong class="glyphicon glyphicon-arrow-right"></strong>
-                                            <strong>Total Bill :  </strong> @(totalBill-item.Taxi.Price)
-                                        }
-                                        else
-                                        {
-                                            <strong>Total Bill :  </strong> @totalBill
-                                        }
-                                    }
+                    @{
 
-                                </span>
+                        if (item.Taxi_ID != null)
+                        {
+                            <strong>Giảm trực tiếp : </strong> @item.Taxi.Price <strong class="glyphicon glyphicon-arrow-right"></strong>
+                            <strong>Total Bill :  </strong> @(totalBill-item.Taxi.Price)
+                        }
+                        else
+                        {
+                            <strong>Total Bill :  </strong> @totalBill
+                        }
+                    }
+
+                </span>
                                 </td>
                                 </tr>
                                 </tbody>
