Cập nhật: -Tạo page xem KTV đối với tài khoản MEMBER -Xuất hóa đơn

--- a/WebApp/Areas/Admin/Views/Home/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Home/Index.cshtml
@@ -124,7 +124,7 @@
                                 }
                                 else
                                 {
-                                    <p style="color: red;" id="@item.ID"></p>
+                                    <p style="color: red; font-weight:bold;" id="@item.ID"></p>
                                 }
                             </div>
                         </div>
