--- a/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
@@ -36,7 +36,7 @@
                 <div class="col-lg-12">
                     <div class="col-md-4">
                         @*<input type="text" id="txtsearch" class="form-control" placeholder="Nhập vào mã KTV" />*@
-                        <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập vào ID" />
+                        <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập vào mã hóa đơn" />
                     </div>
                     <div class="col-md-4">
                         <button type="submit" class="btn btn-success">Tìm kiếm</button>
@@ -65,7 +65,7 @@
                     <tbody>
                         <tr>
                             <th>
-                                @Html.ActionLink(" ", "EditDailyList", new { id = item.ID }, new { @class = "btn btn-warning pull-right  btn-sm glyphicon glyphicon-edit" })#ID: @item.ID
+                                @Html.ActionLink(" ", "EditDailyList", new { id = item.ID }, new { @class = "btn btn-warning pull-right  btn-sm glyphicon glyphicon-edit" })No. @item.No &emsp;
                                 @if (tip > 0)
                                 {
                                     <strong style="color: green;">Đã thanh toán</strong>
@@ -77,7 +77,7 @@
                             </th>
                             <th>Yêu cầu: @item.Description </th>
                             <td>
-                                Ngày: @item.CreatedDate
+                                Ngày: @item.CreatedDate &emsp;
                                 <a href="/Admin/DailyList/Comfirm/@item.ID" class="btn btn-default" data-id="@item.ID">@Html.Raw(item.Status ? "<strong style=\"color:Green;\">Đã xác nhận</strong>" : "<strong style=\"color:Tomato;\">Xác nhận</strong>")</a>
                             </td>
                         </tr>
@@ -106,7 +106,7 @@
                                                 <td>@order.Amount</td>
                                                 <td>@Html.ActionLink(" ", "EditOrder", new { id = @order.ID }, new { @class = "btn btn-warning pull-right  btn-sm glyphicon glyphicon-edit" })</td>
                                             </tr>
-
+                                          <tr></tr>
                                             <tr>
                                                 <th>KTV</th>
                                                 <th>Tip</th>
