--- a/WebApp/Areas/Admin/Views/DailyList/Payment.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Payment.cshtml
@@ -77,6 +77,7 @@
                                 }
 
                             </span>
+            <p style="color: red;">*Thanh toán thành công khi Tiền Tip > 0</p>
                             </td>
                             </tr>
                             </tbody>
