--- a/WebApp/Areas/Admin/Views/ViolatorKTV/Create.cshtml
+++ b/WebApp/Areas/Admin/Views/ViolatorKTV/Create.cshtml
@@ -54,17 +54,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Tour, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Tour, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Tour, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.Fruit, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Fruit, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Fruit, new { htmlAttributes = new { @class = "form-control", Value = 0 } })
                 @Html.ValidationMessageFor(model => model.Fruit, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -72,7 +64,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Substitution, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Substitution, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Substitution, new { htmlAttributes = new { @class = "form-control", Value = 0 } })
                 @Html.ValidationMessageFor(model => model.Substitution, "", new { @class = "text-danger" })
             </div>
         </div>
