--- a/WebApp/Areas/Admin/Views/DailyList/Order.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Order.cshtml
@@ -35,7 +35,7 @@
 
     <div class="form-group">
         <div class="col-md-2 col-lg-offset-4">
-            <a id="addToList" class="btn btn-primary">Add To List</a>
+            <a id="addToList" class="btn btn-success">Add To List</a>
         </div>
     </div>
     <table id="detailsTable" class="table">
