--- a/WebApp/Areas/Admin/Views/Employee/Detail.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Detail.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Department_ID)
+            @Html.DisplayNameFor(model => model.Department.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Department_ID)
+            @Html.DisplayFor(model => model.Department.Name)
         </dd>
 
         <dt>
@@ -66,15 +66,6 @@
         <dd>
             @Html.DisplayFor(model => model.CreatedDate)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.NumberOfDayOff)
         </dt>
@@ -174,10 +165,6 @@
         <dt>
             @Html.DisplayNameFor(model => model.StatusAccount)
         </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StatusAccount)
-        </dd>
 
     </dl>
 </div>
