--- a/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -7,7 +7,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">MassageVua v1.0</a>
+        <a class="navbar-brand" href="@Url.Action("Index","Home")">
+            Massage Vua
+        </a>
     </div>
     <!-- /.navbar-header -->
     <ul class="nav navbar-top-links navbar-right">
@@ -17,7 +19,7 @@
             </a>
             <ul class="dropdown-menu dropdown-user">
                 <li>
-                    <a href="#"><i class="fa fa-user fa-fw"></i> @ViewBag.sessionUser</a>
+                    <a href="@Url.Action("Detail","Employee")"><i class="fa fa-user fa-fw"></i>Tài khoản</a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
@@ -26,7 +28,6 @@
                 <li>
                     <a href=@Url.Action("LogOut","Login")><i class="fa fa-sign-out fa-fw"></i> Đăng xuất</a>
                     
-                    @*@Html.ActionLink("Đăng xuất", "Index", "Login")*@
                 </li>
             </ul>
             <!-- /.dropdown-user -->
@@ -38,14 +39,6 @@
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
                 <li class="sidebar-search">
-                    <div class="input-group custom-search-form">
-                        <input type="text" class="form-control" placeholder="Search.">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
-                    </div>
                     <!-- /input-group -->
                 </li>
                 <li>
@@ -130,7 +123,7 @@
                             <a href="/Admin/DailyList/CodeIndex"> Danh sách Code</a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Detail","Employee")">Thông tin</a>
+                            <a href="@Url.Action("Detail","Employee")">Tài khoản</a>
                         </li>
                         <li>
                             <a href="#">Hỗ trợ</a>
